Continue working on logout functionality

--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
         <p><label>Password: <input type="password" name="password" id="password"></label></p>
         <p><input class="btn btn-primary" type="submit" name="login" value="Log In" id="login_btn"></p>
         <p id="login_message"></p>
+        <p id="logout"><input class="btn btn-primary" type="submit" style="display:none" name="logout" value="Logout" id="logout_btn"></p>
       </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
