RESTful API finished

--- a/login.html
+++ b/login.html
@@ -18,8 +18,8 @@
   <br><br>
   <div class="container">
       <div class="jumbotron">
-        <p><label>Username: <input type="text" name="username" id="username"></label></p>
-        <p><label>Password: <input type="password" name="password" id="password"></label></p>
+        <p><label>Username: <input type="text" name="username" id="username" required></label></p>
+        <p><label>Password: <input type="password" name="password" id="password" required></label></p>
         <p><input class="btn btn-primary" type="submit" name="login" value="Log In" id="login_btn"></p>
         <p id="login_message"></p>
         <p id="logout"><input class="btn btn-primary" type="submit" style="display:none" name="logout" value="Logout" id="logout_btn"></p>
