--- a/register.html
+++ b/register.html
@@ -18,10 +18,10 @@
     <br><br>
     <div class="container">
         <div class="jumbotron">
-            <p><label>Full Name: <input type="text" name="fullname" id="register_fullname"></label></p>
-            <p><label>Email: <input type="email" name="email" id="register_email"></label></p>
-            <p><label>Username: <input type="text" name="username" id="register_username"></label></p>
-            <p><label>Password: <input type="password" name="password" id="register_password"></label></p>
+            <p><label>Full Name: <input type="text" name="fullname" id="register_fullname" required></label></p>
+            <p><label>Email: <input type="email" name="email" id="register_email" required></label></p>
+            <p><label>Username: <input type="text" name="username" id="register_username" required></label></p>
+            <p><label>Password: <input type="password" name="password" id="register_password" required></label></p>
             <p><input class="btn btn-primary" type="submit" name="register" value="Register" id="register_btn"></p>
             <p id="register_message"></p>
         </div>
